# shartash-telegram-bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  railway.toml
src/shartash_telegram_bot/: content.py  handlers.py  keyboards.py  main.py
