[project]
name = "shartash-telegram-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram (>=3.26.0,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[project.scripts]
shartash-bot = "shartash_telegram_bot.main:run"

[tool.poetry]
packages = [{include = "shartash_telegram_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
